--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,12 @@ vendor
 web/core
 web/modules/contrib
 web/themes/contrib
-web/sites/default/files
+# Include only year-month folders from files
+web/sites/default/files/css
+web/sites/default/files/js
+web/sites/default/files/php
+web/sites/default/files/styles
+web/sites/default/files/.htaccess
 web/libraries/*
 
 ._*
