--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,11 @@
         "drupal/core-composer-scaffold": "^10.3",
         "drupal/core-project-message": "^10.3",
         "drupal/core-recommended": "^10.3",
-        "drush/drush": "^12.5"
+        "drupal/mautic": "^1.13",
+        "drupal/mautic_paragraph": "^1.1",
+        "drush/drush": "^12.5",
+        "guzzlehttp/guzzle": "^7.3",
+        "mautic/api-library": "^3.1"
     },
     "conflict": {
         "drupal/drupal": "*"
