--- a/conf/mautic.settings.yml
+++ b/conf/mautic.settings.yml
@@ -2,7 +2,7 @@ _core:
   default_config_hash: 57YHD-gK9YrCd4mfkPt3DuRirKm_ZMRh2ILuF6JpC44
 visibility:
   request_path_mode: 1
-  request_path_pages: '/*'
+  request_path_pages: "/\r\n/*"
 header: false
 lift_enable: null
 mautic_enable: true
