export config and db

--- a/conf/mautic_paragraph.settings.yml
+++ b/conf/mautic_paragraph.settings.yml
@@ -1,12 +1,12 @@
 _core:
   default_config_hash: _jBWHDxcUqiULjXJMHx8WwoT1VIODfJ3jsHA7pycQos
-connector: basic_auth
+connector: oauth
 limit: 100
 connector_config:
-  scheme: null
-  base_url: null
-  port: ''
-  path: null
-  username: null
-  password: null
-cache: '3600'
+  scheme: ""
+  base_url: ""
+  port:
+  path: ""
+  username: ""
+  password: ""
+cache: "3600"
