--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.15",
     "axios": "^1.7.7",
+    "dompurify": "^3.1.7",
     "mautic-tracking": "^0.9.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
