--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         "drupal/core-recommended": "^10.3",
         "drupal/mautic": "^1.13",
         "drupal/mautic_paragraph": "^1.1",
-        "drush/drush": "^12.5"
+        "drupal/paragraphs": "^1.18",
+        "drush/drush": "^12.5",
+        "mautic/api-library": "^3.1"
     },
     "conflict": {
         "drupal/drupal": "*"
