DRD-63 conf commits

--- a/conf/core.entity_view_display.node.page.default.yml
+++ b/conf/core.entity_view_display.node.page.default.yml
@@ -5,9 +5,11 @@ dependencies:
   config:
     - field.field.node.page.body
     - field.field.node.page.field_image
+    - field.field.node.page.field_paragraphs
     - image.style.wide
     - node.type.page
   module:
+    - entity_reference_revisions
     - image
     - text
     - user
@@ -35,6 +37,15 @@ content:
         attribute: eager
     third_party_settings: {  }
     weight: -1
+    region: content
+  field_paragraphs:
+    type: entity_reference_revisions_entity_view
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    weight: 102
     region: content
   links:
     weight: 101
