--- a/conf/core.entity_form_display.node.blog_paragraph.default.yml
+++ b/conf/core.entity_form_display.node.blog_paragraph.default.yml
@@ -1,52 +1,27 @@
-uuid: 1497cc2c-1dc4-412e-8e4d-9f5d5b2dc4b3
+uuid: cb8885ba-7e65-4c9a-8e89-500ff3372b32
 langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.page.body
-    - field.field.node.page.field_image
-    - field.field.node.page.field_paragraphs
-    - image.style.thumbnail
-    - node.type.page
+    - field.field.node.blog_paragraph.field_paragraph_blog
+    - node.type.blog_paragraph
   module:
-    - image
     - paragraphs
     - path
-    - text
-_core:
-  default_config_hash: SfpLhPExzvR0MgFp0Wp7CrmgEnhcqQ-fXIWFhbf4ue0
-id: node.page.default
+id: node.blog_paragraph.default
 targetEntityType: node
-bundle: page
+bundle: blog_paragraph
 mode: default
 content:
-  body:
-    type: text_textarea_with_summary
-    weight: 31
-    region: content
-    settings:
-      rows: 9
-      summary_rows: 3
-      placeholder: ''
-      show_summary: false
-    third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_image:
-    type: image_image
-    weight: 1
-    region: content
-    settings:
-      progress_indicator: throbber
-      preview_image_style: thumbnail
-    third_party_settings: {  }
-  field_paragraphs:
+  field_paragraph_blog:
     type: paragraphs
-    weight: 121
+    weight: 6
     region: content
     settings:
       title: Paragraph
@@ -64,34 +39,34 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 15
+    weight: 2
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 120
+    weight: 5
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 16
+    weight: 3
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 7
     region: content
     settings:
       size: 60
@@ -99,7 +74,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 0
     region: content
     settings:
       match_operator: CONTAINS
