--- a/conf/core.entity_view_display.node.page.teaser.yml
+++ b/conf/core.entity_view_display.node.page.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.page.body
     - field.field.node.page.field_image
+    - field.field.node.page.field_paragraphs
     - image.style.medium
     - node.type.page
   module:
@@ -41,4 +42,5 @@ content:
   links:
     weight: 101
     region: content
-hidden: {  }
+hidden:
+  field_paragraphs: true
