--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,11 @@
         "drupal/core-composer-scaffold": "^10.3",
         "drupal/core-project-message": "^10.3",
         "drupal/core-recommended": "^10.3",
+        "drupal/dotenv": "^1.2",
         "drupal/mautic": "^1.13",
         "drupal/mautic_paragraph": "^1.1",
         "drupal/paragraphs": "^1.18",
+        "drupal/tac_lite": "^1.7",
         "drush/drush": "^12.5",
         "mautic/api-library": "^3.1"
     },
@@ -40,6 +42,11 @@
             "php-http/discovery": true
         },
         "sort-packages": true
+    },
+    "autoload": {
+        "files": [
+            "load.environment.php"
+        ]
     },
     "extra": {
         "drupal-scaffold": {
