--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "drupal/core-project-message": "^10.3",
         "drupal/core-recommended": "^10.3",
         "drupal/dotenv": "^1.2",
+        "drupal/jsonapi_include": "^1.8",
         "drupal/mautic": "^1.13",
         "drupal/mautic_paragraph": "^1.1",
         "drupal/paragraphs": "^1.18",
