--- a/conf/core.extension.yml
+++ b/conf/core.extension.yml
@@ -1,6 +1,7 @@
 _core:
   default_config_hash: 4GIX5Esnc_umpXUBj4IIocRX7Mt5fPhm4AgXfE3E56E
 module:
+  MauticAPI: 0
   announcements_feed: 0
   automated_cron: 0
   big_pipe: 0
@@ -25,9 +26,12 @@ module:
   history: 0
   image: 0
   jsonapi: 0
+  jsonapi_extras: 0
+  jsonapi_include: 0
   link: 0
   mautic: 0
   mautic_paragraph: 0
+  mautic_proxy: 0
   media: 0
   media_library: 0
   menu_link_content: 0
