--- a/conf/core.entity_form_display.paragraph.blog_paragraph.default.yml
+++ b/conf/core.entity_form_display.paragraph.blog_paragraph.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.paragraph.blog_paragraph.field_blog_body
     - field.field.paragraph.blog_paragraph.field_blog_media
     - field.field.paragraph.blog_paragraph.field_blog_short_text
+    - field.field.paragraph.blog_paragraph.field_mautic_segments
     - field.field.paragraph.blog_paragraph.field_title_parag
     - paragraphs.paragraphs_type.blog_paragraph
   module:
@@ -44,6 +45,12 @@ content:
     settings:
       size: 60
       placeholder: ''
+    third_party_settings: {  }
+  field_mautic_segments:
+    type: options_buttons
+    weight: 6
+    region: content
+    settings: {  }
     third_party_settings: {  }
   field_title_parag:
     type: text_textfield
