--- a/conf/core.entity_form_display.paragraph.text.default.yml
+++ b/conf/core.entity_form_display.paragraph.text.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.text.field_mautic_segments
     - field.field.paragraph.text.field_text
     - field.field.paragraph.text.field_two_columns
     - paragraphs.paragraphs_type.text
@@ -13,6 +14,12 @@ targetEntityType: paragraph
 bundle: text
 mode: default
 content:
+  field_mautic_segments:
+    type: options_buttons
+    weight: 6
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_text:
     type: text_textarea
     weight: 0
