--- a/conf/core.entity_view_display.node.project_case.default.yml
+++ b/conf/core.entity_view_display.node.project_case.default.yml
@@ -57,4 +57,12 @@ content:
     third_party_settings: {  }
     weight: 100
     region: content
+  title:
+    type: string
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    weight: -5
+    region: content
 hidden: {  }
