--- a/conf/core.entity_view_display.paragraph.text.default.yml
+++ b/conf/core.entity_view_display.paragraph.text.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.text.field_mautic_segments
     - field.field.paragraph.text.field_text
     - field.field.paragraph.text.field_two_columns
     - paragraphs.paragraphs_type.text
@@ -13,6 +14,14 @@ targetEntityType: paragraph
 bundle: text
 mode: default
 content:
+  field_mautic_segments:
+    type: entity_reference_label
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    weight: 4
+    region: content
   field_text:
     type: text_default
     label: above
