--- a/conf/core.entity_view_display.paragraph.text_with_image.default.yml
+++ b/conf/core.entity_view_display.paragraph.text_with_image.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.paragraph.text_with_image.field_image
     - field.field.paragraph.text_with_image.field_image_first
     - field.field.paragraph.text_with_image.field_long_text
+    - field.field.paragraph.text_with_image.field_mautic_segments
     - field.field.paragraph.text_with_image.field_title
     - paragraphs.paragraphs_type.text_with_image
 id: paragraph.text_with_image.default
@@ -38,6 +39,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 1
+    region: content
+  field_mautic_segments:
+    type: entity_reference_label
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    weight: 4
     region: content
   field_title:
     type: string
