--- a/conf/field.storage.paragraph.field_mautic_segments.yml
+++ b/conf/field.storage.paragraph.field_mautic_segments.yml
@@ -14,7 +14,4 @@ settings:
 module: core
 locked: false
 cardinality: -1
-translatable: true
-indexes: {  }
-persist_with_no_fields: false
-custom_storage: false
+translatable: false
