--- a/conf/core.entity_form_display.paragraph.image.default.yml
+++ b/conf/core.entity_form_display.paragraph.image.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.image.field_image
+    - field.field.paragraph.image.field_mautic_segments
     - paragraphs.paragraphs_type.image
   module:
     - media_library
@@ -18,6 +19,12 @@ content:
     region: content
     settings:
       media_types: {  }
+    third_party_settings: {  }
+  field_mautic_segments:
+    type: options_buttons
+    weight: 6
+    region: content
+    settings: {  }
     third_party_settings: {  }
 hidden:
   created: true
