--- a/conf/field.field.paragraph.image.field_mautic_segments.yml
+++ b/conf/field.field.paragraph.image.field_mautic_segments.yml
@@ -1,15 +1,15 @@
-uuid: bc4e5237-ee5f-4a10-a39b-6211f5372f73
+uuid: 1884bb93-ecf2-46f5-865e-2db69c048e12
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.paragraph.field_mautic_segments
     - node.type.mautic_segments
-    - paragraphs.paragraphs_type.text
-id: paragraph.text.field_mautic_segments
+    - paragraphs.paragraphs_type.image
+id: paragraph.image.field_mautic_segments
 field_name: field_mautic_segments
 entity_type: paragraph
-bundle: text
+bundle: image
 label: 'Mautic segments'
 description: ''
 required: false
