edit mautic paragraph module to enable localhost mautic url

--- a/mautic-lando/bin/.htaccess
+++ b/mautic-lando/bin/.htaccess
@@ -1,1 +1,5 @@
-deny from all
+<IfModule mod_headers.c>
+    Header set Access-Control-Allow-Origin "*"
+    Header set Access-Control-Allow-Methods "GET,POST,OPTIONS,DELETE,PUT"
+    Header set Access-Control-Allow-Headers "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type"
+</IfModule>
