edit mautic paragraph settings in conf

--- a/conf/mautic_paragraph.settings.yml
+++ b/conf/mautic_paragraph.settings.yml
@@ -4,9 +4,10 @@ connector: basic_auth
 limit: 100
 connector_config:
   scheme: http
-  base_url: localhost:51061
-  port: ""
-  path: ""
+  base_url: appserver.mauticapp.internal
+  port: ''
+  path: ''
+  public_url: 'localhost:51061'
   username: admin
   password: +Nimda666+
-cache: "3600"
+cache: '3600'
