--- a/conf/core.entity_view_display.node.about_us.default.yml
+++ b/conf/core.entity_view_display.node.about_us.default.yml
@@ -5,6 +5,9 @@ dependencies:
   config:
     - field.field.node.about_us.field_about_body
     - field.field.node.about_us.field_about_us
+    - field.field.node.about_us.field_annual_turnover
+    - field.field.node.about_us.field_completed_projects
+    - field.field.node.about_us.field_employees
     - field.field.node.about_us.field_image_about
     - field.field.node.about_us.field_text
     - node.type.about_us
@@ -32,6 +35,32 @@ content:
       link: ''
     third_party_settings: {  }
     weight: 4
+    region: content
+  field_annual_turnover:
+    type: string
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    weight: 8
+    region: content
+  field_completed_projects:
+    type: number_integer
+    label: above
+    settings:
+      thousand_separator: ''
+      prefix_suffix: true
+    third_party_settings: {  }
+    weight: 7
+    region: content
+  field_employees:
+    type: number_integer
+    label: above
+    settings:
+      thousand_separator: ''
+      prefix_suffix: true
+    third_party_settings: {  }
+    weight: 6
     region: content
   field_image_about:
     type: entity_reference_entity_view
