--- a/conf/core.entity_form_display.node.about_us.default.yml
+++ b/conf/core.entity_form_display.node.about_us.default.yml
@@ -5,6 +5,9 @@ dependencies:
   config:
     - field.field.node.about_us.field_about_body
     - field.field.node.about_us.field_about_us
+    - field.field.node.about_us.field_annual_turnover
+    - field.field.node.about_us.field_completed_projects
+    - field.field.node.about_us.field_employees
     - field.field.node.about_us.field_image_about
     - field.field.node.about_us.field_text
     - node.type.about_us
@@ -20,13 +23,13 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 2
     region: content
     settings: {  }
     third_party_settings: {  }
   field_about_body:
     type: text_textarea
-    weight: 125
+    weight: 8
     region: content
     settings:
       rows: 5
@@ -34,7 +37,7 @@ content:
     third_party_settings: {  }
   field_about_us:
     type: paragraphs
-    weight: 122
+    weight: 9
     region: content
     settings:
       title: Paragraph
@@ -50,16 +53,38 @@ content:
         collapse_edit_all: collapse_edit_all
         duplicate: duplicate
     third_party_settings: {  }
+  field_annual_turnover:
+    type: string_textfield
+    weight: 13
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_completed_projects:
+    type: number
+    weight: 12
+    region: content
+    settings:
+      placeholder: ''
+    third_party_settings: {  }
+  field_employees:
+    type: number
+    weight: 11
+    region: content
+    settings:
+      placeholder: ''
+    third_party_settings: {  }
   field_image_about:
     type: media_library_widget
-    weight: 124
+    weight: 7
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
   field_text:
     type: string_textfield
-    weight: 123
+    weight: 10
     region: content
     settings:
       size: 60
@@ -67,34 +92,34 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 15
+    weight: 3
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 120
+    weight: 6
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 16
+    weight: 4
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
@@ -102,7 +127,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 1
     region: content
     settings:
       match_operator: CONTAINS
