--- a/conf/core.entity_view_display.node.about_us.teaser.yml
+++ b/conf/core.entity_view_display.node.about_us.teaser.yml
@@ -6,6 +6,9 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.about_us.field_about_body
     - field.field.node.about_us.field_about_us
+    - field.field.node.about_us.field_annual_turnover
+    - field.field.node.about_us.field_completed_projects
+    - field.field.node.about_us.field_employees
     - field.field.node.about_us.field_image_about
     - field.field.node.about_us.field_text
     - node.type.about_us
@@ -24,5 +27,8 @@ content:
 hidden:
   field_about_body: true
   field_about_us: true
+  field_annual_turnover: true
+  field_completed_projects: true
+  field_employees: true
   field_image_about: true
   field_text: true
