--- a/conf/core.entity_form_display.node.front_page.default.yml
+++ b/conf/core.entity_form_display.node.front_page.default.yml
@@ -4,12 +4,14 @@ status: true
 dependencies:
   config:
     - field.field.node.front_page.body
+    - field.field.node.front_page.field_content
     - field.field.node.front_page.field_description
     - field.field.node.front_page.field_heroimg
     - image.style.thumbnail
     - node.type.front_page
   module:
     - image
+    - paragraphs
     - path
     - text
 id: node.front_page.default
@@ -32,6 +34,24 @@ content:
     weight: 10
     region: content
     settings: {  }
+    third_party_settings: {  }
+  field_content:
+    type: paragraphs
+    weight: 123
+    region: content
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      closed_mode: summary
+      autocollapse: none
+      closed_mode_threshold: 0
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+      features:
+        collapse_edit_all: collapse_edit_all
+        duplicate: duplicate
     third_party_settings: {  }
   field_description:
     type: string_textfield
