--- a/conf/core.entity_view_display.node.front_page.default.yml
+++ b/conf/core.entity_view_display.node.front_page.default.yml
@@ -4,10 +4,12 @@ status: true
 dependencies:
   config:
     - field.field.node.front_page.body
+    - field.field.node.front_page.field_content
     - field.field.node.front_page.field_description
     - field.field.node.front_page.field_heroimg
     - node.type.front_page
   module:
+    - entity_reference_revisions
     - image
     - text
     - user
@@ -22,6 +24,15 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 3
+    region: content
+  field_content:
+    type: entity_reference_revisions_entity_view
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    weight: 103
     region: content
   field_description:
     type: string
