--- a/conf/core.entity_form_display.node.maintenance.default.yml
+++ b/conf/core.entity_form_display.node.maintenance.default.yml
@@ -3,13 +3,16 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.maintenance.field_content
     - field.field.node.maintenance.field_hero_image
     - field.field.node.maintenance.field_long_description
+    - field.field.node.maintenance.field_paragraphs
     - field.field.node.maintenance.field_short_description
     - image.style.thumbnail
     - node.type.maintenance
   module:
     - image
+    - paragraphs
     - path
     - text
 id: node.maintenance.default
@@ -22,6 +25,24 @@ content:
     weight: 10
     region: content
     settings: {  }
+    third_party_settings: {  }
+  field_content:
+    type: paragraphs
+    weight: 10
+    region: content
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      closed_mode: summary
+      autocollapse: none
+      closed_mode_threshold: 0
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+      features:
+        collapse_edit_all: collapse_edit_all
+        duplicate: duplicate
     third_party_settings: {  }
   field_hero_image:
     type: image_image
@@ -38,6 +59,24 @@ content:
     settings:
       rows: 5
       placeholder: ''
+    third_party_settings: {  }
+  field_paragraphs:
+    type: paragraphs
+    weight: 121
+    region: content
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      closed_mode: summary
+      autocollapse: none
+      closed_mode_threshold: 0
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+      features:
+        collapse_edit_all: collapse_edit_all
+        duplicate: duplicate
     third_party_settings: {  }
   field_short_description:
     type: string_textfield
