--- a/conf/core.entity_view_display.node.consultation.teaser.yml
+++ b/conf/core.entity_view_display.node.consultation.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.consultation.field_hero_image
     - field.field.node.consultation.field_long_description
+    - field.field.node.consultation.field_paragraphs
     - field.field.node.consultation.field_short_description
     - node.type.consultation
   module:
@@ -23,4 +24,5 @@ content:
 hidden:
   field_hero_image: true
   field_long_description: true
+  field_paragraphs: true
   field_short_description: true
