--- a/conf/core.entity_view_display.node.maintenance.default.yml
+++ b/conf/core.entity_view_display.node.maintenance.default.yml
@@ -3,11 +3,14 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.maintenance.field_content
     - field.field.node.maintenance.field_hero_image
     - field.field.node.maintenance.field_long_description
+    - field.field.node.maintenance.field_paragraphs
     - field.field.node.maintenance.field_short_description
     - node.type.maintenance
   module:
+    - entity_reference_revisions
     - image
     - text
     - user
@@ -16,6 +19,15 @@ targetEntityType: node
 bundle: maintenance
 mode: default
 content:
+  field_content:
+    type: entity_reference_revisions_entity_view
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    weight: 103
+    region: content
   field_hero_image:
     type: image
     label: above
@@ -33,6 +45,15 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 103
+    region: content
+  field_paragraphs:
+    type: entity_reference_revisions_entity_view
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    weight: 102
     region: content
   field_short_description:
     type: string
