--- a/conf/core.entity_form_display.paragraph.about_us.default.yml
+++ b/conf/core.entity_form_display.paragraph.about_us.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.paragraph.about_us.field_about_body
     - field.field.paragraph.about_us.field_about_media
+    - field.field.paragraph.about_us.field_about_title
     - field.field.paragraph.about_us.field_mautic_segments
     - paragraphs.paragraphs_type.about_us
   module:
@@ -29,6 +30,14 @@ content:
     region: content
     settings:
       media_types: {  }
+    third_party_settings: {  }
+  field_about_title:
+    type: string_textfield
+    weight: 7
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
   field_mautic_segments:
     type: options_buttons
