--- a/conf/core.entity_form_display.node.front_page.default.yml
+++ b/conf/core.entity_form_display.node.front_page.default.yml
@@ -7,10 +7,12 @@ dependencies:
     - field.field.node.front_page.field_content
     - field.field.node.front_page.field_description
     - field.field.node.front_page.field_heroimg
+    - field.field.node.front_page.field_media
     - image.style.thumbnail
     - node.type.front_page
   module:
     - image
+    - media_library
     - paragraphs
     - path
     - text
@@ -68,6 +70,13 @@ content:
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
+    third_party_settings: {  }
+  field_media:
+    type: media_library_widget
+    weight: 26
+    region: content
+    settings:
+      media_types: {  }
     third_party_settings: {  }
   path:
     type: path
